U NDREQ. Mos gabo me prek. Height problems with white space fixed

--- a/loginstyle.css
+++ b/loginstyle.css
@@ -7,28 +7,27 @@ body, html{
 }
 
 @media (max-width: 1000px) {
-    body, html {
-        height: 150%;
-    }
     .container {
         display: flex;
         flex-direction: column;
-        height: 300%;
+        height: auto;
         width: 100%;
     }
 
     .container .loginBlock {
         width: 100%;
-        height: 100%
+        height: 100%;
     }
     .container .signUpBlock {
         width: 100%;
-        height: 50%;
+        height: 100%;
+        padding: 30% 0;
+        
     }
 }
 .container {
     display: flex;
-    height: auto;
+    height: 100%;
     padding:0;
     margin:0;
 }
